--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "{appname}",
+  "name": "iab",
   "version": "1.0.0",
-  "description": "{description}",
+  "description": "Internal API Bridge",
   "main": "index.mjs",
   "scripts": {
     "start": "node -r esm index.mjs",
@@ -9,65 +9,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/univuc/{appname}.git"
+    "url": "git+https://github.com/univuc/IAB.git"
   },
   "keywords": [
-    "{appname}"
+    "IAB"
   ],
   "author": "potados99",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/univuc/{appname}/issues"
+    "url": "https://github.com/univuc/IAB/issues"
   },
-  "homepage": "https://github.com/univuc/{appname}#readme",
+  "homepage": "https://github.com/univuc/IAB#readme",
   "dependencies": {
-    "@hapi/basic": "^6.0.0",
-    "@hapi/boom": "^9.1.0",
-    "@hapi/hapi": "^19.1.1",
-    "@hapi/inert": "^6.0.1",
-    "@slack/web-api": "^5.8.0",
-    "axios-cookiejar-support": "^1.0.0",
-    "crypto": "^1.0.1",
     "esm": "^3.2.25",
-    "minimist": "latest",
-    "redis": "^3.0.2",
+    "qs": "^6.9.3",
     "stack-trace": "0.0.10",
-    "tough-cookie": "^4.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.3.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "jest": "^25.3.0"
-  },
-  "jest": {
-    "testMatch": [
-      "**/__tests__/**/*.?(m)js?(x)",
-      "**/?(*.)(spec|test).?(m)js?(x)"
-    ],
-    "collectCoverageFrom": [
-      "**/*.{mjs,js,}",
-      "!index.mjs",
-      "!config.mjs",
-      "!test/**",
-      "!**/node_modules/**",
-      "!**/coverage/**"
-    ],
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.m?js$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "./node_modules/"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "mjs"
-    ]
+    "eslint-plugin-babel": "^5.3.0"
   }
 }
