--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/univuc/IAB#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "esm": "^3.2.25",
     "qs": "^6.9.3",
     "stack-trace": "0.0.10",
